--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,9 @@
 language: ruby
 rvm:
   - 2.2.2
+env:
+  - RAILS_ENV=test
+script:
+  - bundle exec rake db:schema:load
+  - bundle exec rake db:test:prepare
+  - bundle exec rake spec
