--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,8 @@ rvm:
   - 2.2.2
 services:
 - postgresql
+before_script:
+  - psql -c 'create database travis_ci_test;' -U postgres
 env:
   - RAILS_ENV=test
+# cache: bundler
