--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,10 @@ rvm:
 services:
 - postgresql
 before_script:
-  - psql -c 'create database travis_ci_test;' -U postgres
-env:
-  - RAILS_ENV=test
+  - cp config/database.yml.travis config/database.yml
+  - psql -c 'create database strano_test' -U postgres
+script:
+  - RAILS_ENV=test bundle exec rake db:migrate --trace
+  - bundle exec rake db:test:prepare
+  - bundle exec rake
 # cache: bundler
