Update Travis Config

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ services:
 - postgresql
 before_script:
   - cp config/database.yml.travis config/database.yml
-  - psql -c 'create database strano_test' -U postgres
+  - psql -c 'create database rush-hour-test' -U postgres
 script:
   - RAILS_ENV=test bundle exec rake db:migrate --trace
   - bundle exec rake db:test:prepare
